# cadet

./: Dockerfile  LICENSE  README.md  app.json  dev_notes.md  pyproject.toml  requirements.txt
app/: main.py  test_all.py  tests.py
app/routers/: corpus.py  create.py  edit_code.py  export_texts.py  inception.py  login.py  lookups.py  project.py  sentences.py  texts.py  tokenization.py
app/static/css/: style.css
app/static/js/: main.js
app/static/scss/: _footer.scss  _general.scss  _header.scss  _hero.scss  _sections.scss  _variables.scss  style.scss
app/templates/: base.html  corpus.html  create.html  edit_code.html  edit_json.html  error_please_create.html  export-texts.html  index.html  inner-page.html  login.html  lookups.html  main_page.html  portfolio-details.html  project.html  sentences.html  texts.html  tokenization.html  tokenizer.html
app/util/: clone_object.py  create_object.py  login.py  lookups_data.py  manage_corpus.py  matcher.py
cli/: typer.py
docs/: mkdocs.yml
docs/docs/: another.md  get_started.md
notebook/: cadet_notebook.ipynb
notebook/.ipynb_checkpoints/: cadet_notebook-checkpoint.ipynb
scripts/: fix_conllu_files.py
